--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img class="u-image u-image-default u-image-1" src="images/dellowlogo.png" alt="" data-image-width="1600" data-image-height="400">
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-39b5">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-sheet-1">
         <img class="u-image u-image-round u-radius-27 u-image-1" src="images/minecraft-caves-and-cliffs-update-axolotl-10.jpg" alt="" data-image-width="800" data-image-height="495">
         <img class="u-image u-image-default u-image-2" src="images/testo11.png" alt="" data-image-width="600" data-image-height="400">
       </div>
