--- a/Home.html
+++ b/Home.html
@@ -58,10 +58,10 @@
         <img class="u-image u-image-default u-image-1" src="images/dellowlogo.png" alt="" data-image-width="1600" data-image-height="400">
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-39b5">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-round u-radius-27 u-image-1" src="images/minecraft-caves-and-cliffs-update-axolotl-10.jpg" alt="" data-image-width="800" data-image-height="495">
         <img class="u-image u-image-default u-image-2" src="images/testo11.png" alt="" data-image-width="600" data-image-height="400">
-        <h2 class="u-custom-font u-text u-text-default u-text-white u-text-1">play.dellowcraft.tk:25857</h2>
+        <h2 class="u-custom-font u-text u-text-body-alt-color u-text-default u-text-1">play.dellowcraft.tk:25857</h2>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-2" id="sec-ef38">
