--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-round u-radius-27 u-image-1" src="images/minecraft-caves-and-cliffs-update-axolotl-10.jpg" alt="" data-image-width="800" data-image-height="495">
         <img class="u-image u-image-default u-image-2" src="images/testo11.png" alt="" data-image-width="600" data-image-height="400">
-        <h2 class="u-custom-font u-text u-text-body-alt-color u-text-default u-text-1">play.dellowcraft.tk:25857</h2>
+        <h2 class="u-custom-font u-text u-text-body-alt-color u-text-1">play.dellowcraft.tk</h2>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-2" id="sec-ef38">
