--- a/Discord.html
+++ b/Discord.html
@@ -19,7 +19,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": ""
+		"name": "Site1"
 }</script>
     <meta property="og:title" content="Discord">
     <meta property="og:type" content="website">
@@ -39,6 +39,7 @@
             <ul class="u-custom-font u-font-ubuntu u-nav u-spacing-20 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-dark-1 u-text-hover-palette-4-light-2 u-text-palette-5-dark-1" href="Home.html" style="padding: 10px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-dark-1 u-text-hover-palette-4-light-2 u-text-palette-5-dark-1" href="Documentation.html" style="padding: 10px;">Documentation</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-dark-1 u-text-hover-palette-4-light-2 u-text-palette-5-dark-1" href="Discord.html" style="padding: 10px;">Discord</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-dark-1 u-text-hover-palette-4-light-2 u-text-palette-5-dark-1" href="status.dellowcraft.tk" target="_blank" style="padding: 10px;">Status</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -48,6 +49,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Documentation.html" style="padding: 10px;">Documentation</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Discord.html" style="padding: 10px;">Discord</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="status.dellowcraft.tk" target="_blank" style="padding: 10px;">Status</a>
 </li></ul>
               </div>
             </div>
@@ -66,16 +68,5 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-f9d4"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">FATTO DAL TEAM DI DELLOWCRAFT ⛲</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   </body>
 </html>
