--- a/Documentation.html
+++ b/Documentation.html
@@ -83,7 +83,7 @@
             <div class="u-accordion-pane u-container-style u-shape-rectangle u-accordion-pane-2" id="accordion-72f4" aria-labelledby="link-accordion-72f4">
               <div class="u-container-layout u-container-layout-2">
                 <div class="fr-view u-clearfix u-rich-text u-text u-text-3"></div>
-                <h3 class="u-custom-font u-text u-text-4">Puoi vedere lo stato del server <a href="status.dellowcraft.tk" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">qui</a>&nbsp;se in quella pagina c'e la scritta 'all system oprerational' significa che il server è online e funzionante , nel caso prova a reinstallare la 1.17 , visto che il problema riguarda il tuo pc , proxy, provider di internet.<br>
+                <h3 class="u-custom-font u-text u-text-4">Puoi vedere lo stato del server <a href="http://status.dellowcraft.tk/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">qui</a>&nbsp;se in quella pagina c'e la scritta 'all system oprerational' significa che il server è online e funzionante , nel caso prova a reinstallare la 1.17 , visto che il problema riguarda il tuo pc , proxy, provider di internet.<br>
                   <br>
                   <br>
                 </h3>
