--- a/Documentation.html
+++ b/Documentation.html
@@ -39,7 +39,6 @@
             <ul class="u-custom-font u-font-ubuntu u-nav u-spacing-20 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-dark-1 u-text-hover-palette-4-light-2 u-text-palette-5-dark-1" href="Home.html" style="padding: 10px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-dark-1 u-text-hover-palette-4-light-2 u-text-palette-5-dark-1" href="Documentation.html" style="padding: 10px;">Documentation</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-dark-1 u-text-hover-palette-4-light-2 u-text-palette-5-dark-1" href="Discord.html" style="padding: 10px;">Discord</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-dark-1 u-text-hover-palette-4-light-2 u-text-palette-5-dark-1" href="status.dellowcraft.tk" target="_blank" style="padding: 10px;">Status</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -49,7 +48,6 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Documentation.html" style="padding: 10px;">Documentation</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Discord.html" style="padding: 10px;">Discord</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="status.dellowcraft.tk" target="_blank" style="padding: 10px;">Status</a>
 </li></ul>
               </div>
             </div>
@@ -83,7 +81,7 @@
             <div class="u-accordion-pane u-container-style u-shape-rectangle u-accordion-pane-2" id="accordion-72f4" aria-labelledby="link-accordion-72f4">
               <div class="u-container-layout u-container-layout-2">
                 <div class="fr-view u-clearfix u-rich-text u-text u-text-3"></div>
-                <h3 class="u-custom-font u-text u-text-4">Puoi vedere lo stato del server <a href="http://status.dellowcraft.tk/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">qui</a>&nbsp;se in quella pagina c'e la scritta 'all system oprerational' significa che il server è online e funzionante , nel caso prova a reinstallare la 1.17 , visto che il problema riguarda il tuo pc , proxy, provider di internet.<br>
+                <h3 class="u-custom-font u-text u-text-4">Puoi vedere lo stato del server su status.dellowcraft.tk&nbsp;&nbsp;se in quella pagina c'e la scritta 'all system oprerational' significa che il server è online e funzionante , nel caso prova a reinstallare la 1.17 , visto che il problema riguarda il tuo pc , proxy, provider di internet.<br>
                   <br>
                   <br>
                 </h3>
